--- a/frontend/src/components/StatCard/startcard.scss
+++ b/frontend/src/components/StatCard/startcard.scss
@@ -1,28 +1,44 @@
 .MuiListItem-gutters {
-    padding-left: 3px !important;
-    padding-right: 3px !important;
-    padding-top: 0 !important;
-    padding-bottom: 0 !important;
+  padding-left: 3px !important;
+  padding-right: 3px !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
 }
 
 .adminTeamsCardMore {
-    right: 16px;
+  right: 16px;
 }
 
 .MuiPopover-paper {
-    min-width: 77px !important;
+  min-width: 77px !important;
 }
 
 .MuiList-padding {
-    padding-top: 8px !important;
-    padding-bottom: 8px !important;
+  padding-top: 8px !important;
+  padding-bottom: 8px !important;
 }
 
 .MuiTypography-body1 {
-    font-size: 1.1rem !important;
-    font-weight: 700 !important;
+  font-size: 1.1rem !important;
+  font-weight: 700 !important;
 }
 
 .MuiDivider-root {
-    background-color: #000000 !important;
+  background-color: #000000 !important;
+}
+
+.actionCard {
+  padding: 24px;
+}
+
+.temperature {
+  width: 50px;
+}
+
+.sensor {
+  width: 25px;
+  height: 100%;
+}
+.highSignal {
+  height: 26px;
 }
