--- a/frontend/src/styles/components/_Dashboard.scss
+++ b/frontend/src/styles/components/_Dashboard.scss
@@ -145,8 +145,8 @@
     height: 24px;
     font-family: 'Open Sans';
     font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
+    font-weight: 400;
+    font-size: 24px;
     line-height: 24px;
     color: #000000;
   }
