--- a/frontend/src/styles/components/_Button.scss
+++ b/frontend/src/styles/components/_Button.scss
@@ -288,7 +288,7 @@
   ._editProfile {
     margin-bottom: 5px;
   }
-  button {
+  Button {
     background: none;
     border: none;
     font-size: 14px;
