--- a/frontend/src/styles/components/_Dashboard.scss
+++ b/frontend/src/styles/components/_Dashboard.scss
@@ -139,6 +139,13 @@
       margin-bottom: 0;
     }
   }
+  .temperatureText {
+    font-size: 16px;
+  }
+
+  .sensorRecentTime {
+    font-size: 14px;
+  }
 
   .adminTeamsCardTitle {
     width: 100%;
