delete unnecessary files

--- a/frontend/src/styles/components/_Button.scss
+++ b/frontend/src/styles/components/_Button.scss
@@ -71,6 +71,7 @@
       padding: 18px 20px;
       font-weight: 600;
       height: 56px;
+      font-size: 16px;
       &-teamcreate {
         width: 312px;
         height: 56px;
